--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -12,11 +12,14 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Editor directories and files
+# IDE/Editor specific
 .idea/
 .vscode/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
-*.sw? 
+*.sw?
+
+# MongoDB memory server binary
+.mongodb-binaries/
